# dunck

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: rust.yml
data/pgn_test_files/: amirkhafan_vs_trickortreat.pgn  amirkhafan_vs_trickortreat_formatted.pgn  blitzstream-twitch_vs_amirkhafan_formatted.pgn  complex_formatted.pgn  pinhead-larry_vs_orlando_gloom.pgn  pinhead-larry_vs_orlando_gloom_formatted.pgn  rosen1.pgn  rosen1_formatted.pgn
src/: attacks.rs  bitboard.rs  board.rs  charboard.rs  consts.rs  enums.rs  fen.rs  history.rs  lib.rs  magic.rs  magic_attacks.rs  main.rs  manual_attacks.rs  masks.rs  miscellaneous.rs  move.rs  movegen.rs  perft.rs  precompute.rs  precomputed_attacks.rs  preload.rs  san.rs  squares.rs  state.rs  utils.rs  zobrist.rs
src/attacks/: magic.rs  magic_attacks.rs  manual.rs  mod.rs  precomputed.rs  precomputed_attacks.rs
src/engine/: conv_net_evaluator.rs  evaluate.rs  evaluation.rs  material_evaluator.rs  mcts.rs  mod.rs  neural_network.rs  rollout_evaluator.rs
src/move/: mod.rs  move.rs  move_flag.rs  san.rs
src/pgn/: error.rs  mod.rs  multi_pgn.rs  parse.rs  pgn_history_tree.rs  pgn_history_tree_traverser.rs  pgn_move_node.rs  pgn_move_tree.rs  pgn_move_tree_node.rs  pgn_move_tree_traverser.rs  render.rs  state_tree.rs  state_tree_node.rs  state_tree_traverser.rs  tokenize.rs
src/state/: board.rs  context.rs  fen.rs  make_move.rs  mod.rs  movegen.rs  state.rs  termination.rs  unmake_move.rs  zobrist.rs
src/utils/: bitboard.rs  charboard.rs  color.rs  colored_piece.rs  masks.rs  mod.rs  piece_type.rs  (+2 more)
(+34 files in other folders)
