[package]
name = "dunck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde = { version = "1.0.160", features = ["derive"] }
lazy_static = "1.4.0"
indexmap = "2.2.5"
chess = "3.2.0"
