[package]
name = "dunck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde = { version = "1.0.160", features = ["derive"] }
lazy_static = "1.4.0"
indexmap = "2.2.5"
chess = "3.2.0"
bincode = "1.3.3"
fastrand = "2.1.1"
subenum = "1.1.2"
tch = { version = "0.18.0", features = ["download-libtorch"] }


[profile.dev.package.tch]
debug = false