[package]
name = "dunck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.3"
serde = { version = "1.0.160", features = ["derive"] }
lazy_static = "1.4.0"
indexmap = "2.2.5"
bincode = "1.3.3"
fastrand = "2.1.1"
subenum = "1.1.2"
tch = { version = "0.18.0", features = ["download-libtorch"] }
static_init = "1.0.3"

[dev-dependencies]
chess = "3.2.0"

[profile.dev.package.tch]
debug = false
